# epub_reader

./: Cargo.toml  README.md  _typos.toml
assets/: test.resource
examples/: mvp.rs
src/: main.rs
