[package]
name = "epub_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "1.2.3"
roxmltree = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
epub = "2.1.2"
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "net", "macros"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies-dev]
